@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2014 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -24,18 +24,15 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.UUID;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.core.convert.ConversionFailedException;
 import org.springframework.core.convert.ConverterNotFoundException;
@@ -46,167 +43,157 @@ import org.springframework.core.convert.converter.ConverterFactory;
 import org.springframework.core.convert.converter.GenericConverter;
 import org.springframework.core.io.DescriptiveResource;
 import org.springframework.core.io.Resource;
-import org.springframework.tests.Assume;
-import org.springframework.tests.TestGroup;
+import org.springframework.core.testfixture.EnabledForTestGroups;
+import org.springframework.lang.Nullable;
 import org.springframework.util.StopWatch;
 import org.springframework.util.StringUtils;
 
-import static org.hamcrest.Matchers.*;
-import static org.junit.Assert.*;
+import static java.util.Comparator.naturalOrder;
+import static java.util.stream.Collectors.toList;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
+import static org.springframework.core.testfixture.TestGroup.PERFORMANCE;
 
 /**
+ * Unit tests for {@link GenericConversionService}.
+ *
+ * <p>In this package for access to package-local converter implementations.
+ *
  * @author Keith Donald
  * @author Juergen Hoeller
  * @author Phillip Webb
  * @author David Haraburda
+ * @author Sam Brannen
  */
-public class GenericConversionServiceTests {
+class GenericConversionServiceTests {
 
-	private GenericConversionService conversionService = new GenericConversionService();
+	private final GenericConversionService conversionService = new GenericConversionService();
 
 
 	@Test
-	public void canConvert() {
-		assertFalse(conversionService.canConvert(String.class, Integer.class));
+	void canConvert() {
+		assertThat(conversionService.canConvert(String.class, Integer.class)).isFalse();
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		assertTrue(conversionService.canConvert(String.class, Integer.class));
+		assertThat(conversionService.canConvert(String.class, Integer.class)).isTrue();
 	}
 
 	@Test
-	public void canConvertAssignable() {
-		assertTrue(conversionService.canConvert(String.class, String.class));
-		assertTrue(conversionService.canConvert(Integer.class, Number.class));
-		assertTrue(conversionService.canConvert(boolean.class, boolean.class));
-		assertTrue(conversionService.canConvert(boolean.class, Boolean.class));
+	void canConvertAssignable() {
+		assertThat(conversionService.canConvert(String.class, String.class)).isTrue();
+		assertThat(conversionService.canConvert(Integer.class, Number.class)).isTrue();
+		assertThat(conversionService.canConvert(boolean.class, boolean.class)).isTrue();
+		assertThat(conversionService.canConvert(boolean.class, Boolean.class)).isTrue();
 	}
 
 	@Test
-	public void canConvertIllegalArgumentNullTargetType() {
-		try {
-			assertFalse(conversionService.canConvert(String.class, null));
-			fail("Should have failed");
-		}
-		catch (IllegalArgumentException ex) {
-		}
-		try {
-			assertFalse(conversionService.canConvert(TypeDescriptor.valueOf(String.class), null));
-			fail("Should have failed");
-		}
-		catch (IllegalArgumentException ex) {
-		}
+	void canConvertFromClassSourceTypeToNullTargetType() {
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				conversionService.canConvert(String.class, null));
 	}
 
 	@Test
-	public void canConvertNullSourceType() {
-		assertTrue(conversionService.canConvert(null, Integer.class));
-		assertTrue(conversionService.canConvert(null, TypeDescriptor.valueOf(Integer.class)));
+	void canConvertFromTypeDescriptorSourceTypeToNullTargetType() {
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				conversionService.canConvert(TypeDescriptor.valueOf(String.class), null));
 	}
 
 	@Test
-	public void convert() {
+	void canConvertNullSourceType() {
+		assertThat(conversionService.canConvert(null, Integer.class)).isTrue();
+		assertThat(conversionService.canConvert(null, TypeDescriptor.valueOf(Integer.class))).isTrue();
+	}
+
+	@Test
+	void convert() {
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		assertEquals(new Integer(3), conversionService.convert("3", Integer.class));
+		assertThat(conversionService.convert("3", Integer.class)).isEqualTo((int) Integer.valueOf(3));
 	}
 
 	@Test
-	public void convertNullSource() {
-		assertEquals(null, conversionService.convert(null, Integer.class));
-	}
-
-	@Test(expected=ConversionFailedException.class)
-	public void convertNullSourcePrimitiveTarget() {
-		assertEquals(null, conversionService.convert(null, int.class));
-	}
-
-	@Test(expected=ConversionFailedException.class)
-	public void convertNullSourcePrimitiveTargetTypeDescriptor() {
-		conversionService.convert(null, TypeDescriptor.valueOf(String.class), TypeDescriptor.valueOf(int.class));
-	}
-
-	@Test(expected=IllegalArgumentException.class)
-	public void convertNotNullSourceNullSourceTypeDescriptor() {
-		conversionService.convert("3", null, TypeDescriptor.valueOf(int.class));
+	void convertNullSource() {
+		assertThat(conversionService.convert(null, Integer.class)).isEqualTo(null);
 	}
 
 	@Test
-	public void convertAssignableSource() {
-		assertEquals(Boolean.FALSE, conversionService.convert(false, boolean.class));
-		assertEquals(Boolean.FALSE, conversionService.convert(false, Boolean.class));
+	void convertNullSourcePrimitiveTarget() {
+		assertThatExceptionOfType(ConversionFailedException.class).isThrownBy(() ->
+				conversionService.convert(null, int.class));
 	}
 
 	@Test
-	public void converterNotFound() {
-		try {
-			conversionService.convert("3", Integer.class);
-			fail("Should have thrown an exception");
-		}
-		catch (ConverterNotFoundException e) {
-		}
+	void convertNullSourcePrimitiveTargetTypeDescriptor() {
+		assertThatExceptionOfType(ConversionFailedException.class).isThrownBy(() ->
+				conversionService.convert(null, TypeDescriptor.valueOf(String.class), TypeDescriptor.valueOf(int.class)));
 	}
 
 	@Test
-	@SuppressWarnings("rawtypes")
-	public void addConverterNoSourceTargetClassInfoAvailable() {
-		try {
-			conversionService.addConverter(new Converter() {
-				@Override
-				public Object convert(Object source) {
-					return source;
-				}
-			});
-			fail("Should have failed");
-		}
-		catch (IllegalArgumentException ex) {
-		}
+	void convertNotNullSourceNullSourceTypeDescriptor() {
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				conversionService.convert("3", null, TypeDescriptor.valueOf(int.class)));
 	}
 
 	@Test
-	public void sourceTypeIsVoid() {
-		GenericConversionService conversionService = new GenericConversionService();
-		assertFalse(conversionService.canConvert(void.class, String.class));
+	void convertAssignableSource() {
+		assertThat(conversionService.convert(false, boolean.class)).isEqualTo(Boolean.FALSE);
+		assertThat(conversionService.convert(false, Boolean.class)).isEqualTo(Boolean.FALSE);
 	}
 
 	@Test
-	public void targetTypeIsVoid() {
-		GenericConversionService conversionService = new GenericConversionService();
-		assertFalse(conversionService.canConvert(String.class, void.class));
+	void converterNotFound() {
+		assertThatExceptionOfType(ConverterNotFoundException.class).isThrownBy(() ->
+				conversionService.convert("3", Integer.class));
 	}
 
 	@Test
-	public void convertNull() {
-		assertNull(conversionService.convert(null, Integer.class));
-	}
-
-	@Test(expected=IllegalArgumentException.class)
-	public void convertNullTargetClass() {
-		assertNull(conversionService.convert("3", (Class<?>) null));
-		assertNull(conversionService.convert("3", TypeDescriptor.valueOf(String.class), null));
-	}
-
-	@Test(expected=IllegalArgumentException.class)
-	public void convertNullTypeDescriptor() {
-		assertNull(conversionService.convert("3", TypeDescriptor.valueOf(String.class), null));
-	}
-
-	@Test(expected=IllegalArgumentException.class)
-	public void convertWrongSourceTypeDescriptor() {
-		conversionService.convert("3", TypeDescriptor.valueOf(Integer.class), TypeDescriptor.valueOf(Long.class));
+	void addConverterNoSourceTargetClassInfoAvailable() {
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				conversionService.addConverter(new UntypedConverter()));
 	}
 
 	@Test
-	public void convertWrongTypeArgument() {
+	void sourceTypeIsVoid() {
+		assertThat(conversionService.canConvert(void.class, String.class)).isFalse();
+	}
+
+	@Test
+	void targetTypeIsVoid() {
+		assertThat(conversionService.canConvert(String.class, void.class)).isFalse();
+	}
+
+	@Test
+	void convertNull() {
+		assertThat(conversionService.convert(null, Integer.class)).isNull();
+	}
+
+	@Test
+	void convertToNullTargetClass() {
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				conversionService.convert("3", (Class<?>) null));
+	}
+
+	@Test
+	void convertToNullTargetTypeDescriptor() {
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				conversionService.convert("3", TypeDescriptor.valueOf(String.class), null));
+	}
+
+	@Test
+	void convertWrongSourceTypeDescriptor() {
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				conversionService.convert("3", TypeDescriptor.valueOf(Integer.class), TypeDescriptor.valueOf(Long.class)));
+	}
+
+	@Test
+	void convertWrongTypeArgument() {
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		try {
-			conversionService.convert("BOGUS", Integer.class);
-			fail("Should have failed");
-		}
-		catch (ConversionFailedException e) {
-
-		}
+		assertThatExceptionOfType(ConversionFailedException.class).isThrownBy(() ->
+				conversionService.convert("BOGUS", Integer.class));
 	}
 
 	@Test
-	public void convertSuperSourceType() {
+	void convertSuperSourceType() {
 		conversionService.addConverter(new Converter<CharSequence, Integer>() {
 			@Override
 			public Integer convert(CharSequence source) {
@@ -214,219 +201,153 @@ public class GenericConversionServiceTests {
 			}
 		});
 		Integer result = conversionService.convert("3", Integer.class);
-		assertEquals(new Integer(3), result);
+		assertThat((int) result).isEqualTo((int) Integer.valueOf(3));
 	}
 
 	// SPR-8718
-
-	@Test(expected=ConverterNotFoundException.class)
-	public void convertSuperTarget() {
+	@Test
+	void convertSuperTarget() {
 		conversionService.addConverter(new ColorConverter());
-		conversionService.convert("#000000", SystemColor.class);
-	}
-
-	public class ColorConverter implements Converter<String, Color> {
-		@Override
-		public Color convert(String source) { if (!source.startsWith("#")) source = "#" + source; return Color.decode(source); }
+		assertThatExceptionOfType(ConverterNotFoundException.class).isThrownBy(() ->
+				conversionService.convert("#000000", SystemColor.class));
 	}
 
 	@Test
-	public void convertObjectToPrimitive() {
-		assertFalse(conversionService.canConvert(String.class, boolean.class));
+	void convertObjectToPrimitive() {
+		assertThat(conversionService.canConvert(String.class, boolean.class)).isFalse();
 		conversionService.addConverter(new StringToBooleanConverter());
-		assertTrue(conversionService.canConvert(String.class, boolean.class));
+		assertThat(conversionService.canConvert(String.class, boolean.class)).isTrue();
 		Boolean b = conversionService.convert("true", boolean.class);
-		assertEquals(Boolean.TRUE, b);
-		assertTrue(conversionService.canConvert(TypeDescriptor.valueOf(String.class), TypeDescriptor.valueOf(boolean.class)));
+		assertThat(b).isTrue();
+		assertThat(conversionService.canConvert(TypeDescriptor.valueOf(String.class), TypeDescriptor.valueOf(boolean.class))).isTrue();
 		b = (Boolean) conversionService.convert("true", TypeDescriptor.valueOf(String.class), TypeDescriptor.valueOf(boolean.class));
-		assertEquals(Boolean.TRUE, b);
+		assertThat(b).isTrue();
 	}
 
 	@Test
-	public void convertObjectToPrimitiveViaConverterFactory() {
-		assertFalse(conversionService.canConvert(String.class, int.class));
+	void convertObjectToPrimitiveViaConverterFactory() {
+		assertThat(conversionService.canConvert(String.class, int.class)).isFalse();
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		assertTrue(conversionService.canConvert(String.class, int.class));
+		assertThat(conversionService.canConvert(String.class, int.class)).isTrue();
 		Integer three = conversionService.convert("3", int.class);
-		assertEquals(3, three.intValue());
+		assertThat(three.intValue()).isEqualTo(3);
 	}
 
 	@Test
-	public void genericConverterDelegatingBackToConversionServiceConverterNotFound() {
+	void genericConverterDelegatingBackToConversionServiceConverterNotFound() {
 		conversionService.addConverter(new ObjectToArrayConverter(conversionService));
-		assertFalse(conversionService.canConvert(String.class, Integer[].class));
-		try {
-			conversionService.convert("3,4,5", Integer[].class);
-			fail("should have failed");
-		}
-		catch (ConverterNotFoundException ex) {
-		}
+		assertThat(conversionService.canConvert(String.class, Integer[].class)).isFalse();
+		assertThatExceptionOfType(ConverterNotFoundException.class).isThrownBy(() ->
+				conversionService.convert("3,4,5", Integer[].class));
 	}
 
 	@Test
-	public void testListToIterableConversion() {
-		GenericConversionService conversionService = new GenericConversionService();
-		List<Object> raw = new ArrayList<Object>();
+	void listToIterableConversion() {
+		List<Object> raw = new ArrayList<>();
 		raw.add("one");
 		raw.add("two");
 		Object converted = conversionService.convert(raw, Iterable.class);
-		assertSame(raw, converted);
+		assertThat(converted).isSameAs(raw);
 	}
 
 	@Test
-	public void testListToObjectConversion() {
-		GenericConversionService conversionService = new GenericConversionService();
-		List<Object> raw = new ArrayList<Object>();
+	void listToObjectConversion() {
+		List<Object> raw = new ArrayList<>();
 		raw.add("one");
 		raw.add("two");
 		Object converted = conversionService.convert(raw, Object.class);
-		assertSame(raw, converted);
+		assertThat(converted).isSameAs(raw);
 	}
 
 	@Test
-	public void testMapToObjectConversion() {
-		GenericConversionService conversionService = new GenericConversionService();
-		Map<Object, Object> raw = new HashMap<Object, Object>();
+	void mapToObjectConversion() {
+		Map<Object, Object> raw = new HashMap<>();
 		raw.put("key", "value");
 		Object converted = conversionService.convert(raw, Object.class);
-		assertSame(raw, converted);
+		assertThat(converted).isSameAs(raw);
 	}
 
 	@Test
-	public void testInterfaceToString() {
-		GenericConversionService conversionService = new GenericConversionService();
-		conversionService.addConverter(new MyBaseInterfaceConverter());
+	void interfaceToString() {
+		conversionService.addConverter(new MyBaseInterfaceToStringConverter());
 		conversionService.addConverter(new ObjectToStringConverter());
 		Object converted = conversionService.convert(new MyInterfaceImplementer(), String.class);
-		assertEquals("RESULT", converted);
+		assertThat(converted).isEqualTo("RESULT");
 	}
 
 	@Test
-	public void testInterfaceArrayToStringArray() {
-		GenericConversionService conversionService = new GenericConversionService();
-		conversionService.addConverter(new MyBaseInterfaceConverter());
+	void interfaceArrayToStringArray() {
+		conversionService.addConverter(new MyBaseInterfaceToStringConverter());
 		conversionService.addConverter(new ArrayToArrayConverter(conversionService));
 		String[] converted = conversionService.convert(new MyInterface[] {new MyInterfaceImplementer()}, String[].class);
-		assertEquals("RESULT", converted[0]);
+		assertThat(converted[0]).isEqualTo("RESULT");
 	}
 
 	@Test
-	public void testObjectArrayToStringArray() {
-		GenericConversionService conversionService = new GenericConversionService();
-		conversionService.addConverter(new MyBaseInterfaceConverter());
+	void objectArrayToStringArray() {
+		conversionService.addConverter(new MyBaseInterfaceToStringConverter());
 		conversionService.addConverter(new ArrayToArrayConverter(conversionService));
 		String[] converted = conversionService.convert(new MyInterfaceImplementer[] {new MyInterfaceImplementer()}, String[].class);
-		assertEquals("RESULT", converted[0]);
+		assertThat(converted[0]).isEqualTo("RESULT");
 	}
 
 	@Test
-	public void testStringArrayToResourceArray() {
-		GenericConversionService conversionService = new DefaultConversionService();
+	void stringArrayToResourceArray() {
 		conversionService.addConverter(new MyStringArrayToResourceArrayConverter());
-		Resource[] converted = conversionService.convert(new String[] {"x1", "z3"}, Resource[].class);
-		assertEquals(2, converted.length);
-		assertEquals("1", converted[0].getDescription());
-		assertEquals("3", converted[1].getDescription());
+		Resource[] converted = conversionService.convert(new String[] { "x1", "z3" }, Resource[].class);
+		List<String> descriptions = Arrays.stream(converted).map(Resource::getDescription).sorted(naturalOrder()).collect(toList());
+		assertThat(descriptions).isEqualTo(Arrays.asList("1", "3"));
 	}
 
 	@Test
-	public void testStringArrayToIntegerArray() {
-		GenericConversionService conversionService = new DefaultConversionService();
+	void stringArrayToIntegerArray() {
 		conversionService.addConverter(new MyStringArrayToIntegerArrayConverter());
 		Integer[] converted = conversionService.convert(new String[] {"x1", "z3"}, Integer[].class);
-		assertEquals(2, converted.length);
-		assertEquals(1, converted[0].intValue());
-		assertEquals(3, converted[1].intValue());
+		assertThat(converted).isEqualTo(new Integer[] { 1, 3 });
 	}
 
 	@Test
-	public void testStringToIntegerArray() {
-		GenericConversionService conversionService = new DefaultConversionService();
+	void stringToIntegerArray() {
 		conversionService.addConverter(new MyStringToIntegerArrayConverter());
 		Integer[] converted = conversionService.convert("x1,z3", Integer[].class);
-		assertEquals(2, converted.length);
-		assertEquals(1, converted[0].intValue());
-		assertEquals(3, converted[1].intValue());
+		assertThat(converted).isEqualTo(new Integer[] { 1, 3 });
 	}
 
 	@Test
-	public void testWildcardMap() throws Exception {
-		GenericConversionService conversionService = new DefaultConversionService();
-		Map<String, String> input = new LinkedHashMap<String, String>();
+	void wildcardMap() throws Exception {
+		Map<String, String> input = new LinkedHashMap<>();
 		input.put("key", "value");
 		Object converted = conversionService.convert(input, TypeDescriptor.forObject(input), new TypeDescriptor(getClass().getField("wildcardMap")));
-		assertEquals(input, converted);
+		assertThat(converted).isEqualTo(input);
 	}
 
 	@Test
-	public void testListOfList() {
-		GenericConversionService service = new DefaultConversionService();
-		List<String> list1 = Arrays.asList("Foo", "Bar");
-		List<String> list2 = Arrays.asList("Baz", "Boop");
-		List<List<String>> list = Arrays.asList(list1, list2);
-		String result = service.convert(list, String.class);
-		assertNotNull(result);
-		assertEquals("Foo,Bar,Baz,Boop", result);
-	}
-
-	@Test
-	public void testStringToString() {
-		GenericConversionService service = new DefaultConversionService();
+	void stringToString() {
 		String value = "myValue";
-		String result = service.convert(value, String.class);
-		assertSame(value, result);
+		String result = conversionService.convert(value, String.class);
+		assertThat(result).isSameAs(value);
 	}
 
 	@Test
-	public void testStringToObject() {
-		GenericConversionService service = new DefaultConversionService();
+	void stringToObject() {
 		String value = "myValue";
-		Object result = service.convert(value, Object.class);
-		assertSame(value, result);
+		Object result = conversionService.convert(value, Object.class);
+		assertThat(result).isSameAs(value);
 	}
 
 	@Test
-	public void testIgnoreCopyConstructor() {
-		GenericConversionService service = new DefaultConversionService();
+	void ignoreCopyConstructor() {
 		WithCopyConstructor value = new WithCopyConstructor();
-		Object result = service.convert(value, WithCopyConstructor.class);
-		assertSame(value, result);
+		Object result = conversionService.convert(value, WithCopyConstructor.class);
+		assertThat(result).isSameAs(value);
 	}
 
 	@Test
-	public void testConvertUUID() {
-		GenericConversionService service = new DefaultConversionService();
-		UUID uuid = UUID.randomUUID();
-		String convertToString = service.convert(uuid, String.class);
-		UUID convertToUUID = service.convert(convertToString, UUID.class);
-		assertEquals(uuid, convertToUUID);
-	}
-
-	@Test
-	public void testPerformance1() {
-		Assume.group(TestGroup.PERFORMANCE);
-		GenericConversionService conversionService = new DefaultConversionService();
-		StopWatch watch = new StopWatch("integer->string conversionPerformance");
-		watch.start("convert 4,000,000 with conversion service");
-		for (int i = 0; i < 4000000; i++) {
-			conversionService.convert(3, String.class);
-		}
-		watch.stop();
-		watch.start("convert 4,000,000 manually");
-		for (int i = 0; i < 4000000; i++) {
-			new Integer(3).toString();
-		}
-		watch.stop();
-		System.out.println(watch.prettyPrint());
-	}
-
-	@Test
-	public void testPerformance2() throws Exception {
-		Assume.group(TestGroup.PERFORMANCE);
-		GenericConversionService conversionService = new DefaultConversionService();
+	@EnabledForTestGroups(PERFORMANCE)
+	void testPerformance2() throws Exception {
 		StopWatch watch = new StopWatch("list<string> -> list<integer> conversionPerformance");
 		watch.start("convert 4,000,000 with conversion service");
-		List<String> source = new LinkedList<String>();
+		List<String> source = new LinkedList<>();
 		source.add("1");
 		source.add("2");
 		source.add("3");
@@ -437,22 +358,21 @@ public class GenericConversionServiceTests {
 		watch.stop();
 		watch.start("convert 4,000,000 manually");
 		for (int i = 0; i < 4000000; i++) {
-			List<Integer> target = new ArrayList<Integer>(source.size());
+			List<Integer> target = new ArrayList<>(source.size());
 			for (String element : source) {
 				target.add(Integer.valueOf(element));
 			}
 		}
 		watch.stop();
-		System.out.println(watch.prettyPrint());
+		// System.out.println(watch.prettyPrint());
 	}
 
 	@Test
-	public void testPerformance3() throws Exception {
-		Assume.group(TestGroup.PERFORMANCE);
-		GenericConversionService conversionService = new DefaultConversionService();
+	@EnabledForTestGroups(PERFORMANCE)
+	void testPerformance3() throws Exception {
 		StopWatch watch = new StopWatch("map<string, string> -> map<string, integer> conversionPerformance");
 		watch.start("convert 4,000,000 with conversion service");
-		Map<String, String> source = new HashMap<String, String>();
+		Map<String, String> source = new HashMap<>();
 		source.put("1", "1");
 		source.put("2", "2");
 		source.put("3", "3");
@@ -463,253 +383,191 @@ public class GenericConversionServiceTests {
 		watch.stop();
 		watch.start("convert 4,000,000 manually");
 		for (int i = 0; i < 4000000; i++) {
-			Map<String, Integer> target = new HashMap<String, Integer>(source.size());
-			for (Map.Entry<String, String> entry : source.entrySet()) {
-				target.put(entry.getKey(), Integer.valueOf(entry.getValue()));
-			}
+			Map<String, Integer> target = new HashMap<>(source.size());
+			source.forEach((k, v) -> target.put(k, Integer.valueOf(v)));
 		}
 		watch.stop();
-		System.out.println(watch.prettyPrint());
+		// System.out.println(watch.prettyPrint());
 	}
 
 	@Test
-	public void emptyListToArray() {
+	void emptyListToArray() {
 		conversionService.addConverter(new CollectionToArrayConverter(conversionService));
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		List<String> list = new ArrayList<String>();
+		List<String> list = new ArrayList<>();
 		TypeDescriptor sourceType = TypeDescriptor.forObject(list);
 		TypeDescriptor targetType = TypeDescriptor.valueOf(String[].class);
-		assertTrue(conversionService.canConvert(sourceType, targetType));
-		assertEquals(0, ((String[]) conversionService.convert(list, sourceType, targetType)).length);
+		assertThat(conversionService.canConvert(sourceType, targetType)).isTrue();
+		assertThat(((String[]) conversionService.convert(list, sourceType, targetType)).length).isEqualTo(0);
 	}
 
 	@Test
-	public void emptyListToObject() {
+	void emptyListToObject() {
 		conversionService.addConverter(new CollectionToObjectConverter(conversionService));
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		List<String> list = new ArrayList<String>();
+		List<String> list = new ArrayList<>();
 		TypeDescriptor sourceType = TypeDescriptor.forObject(list);
 		TypeDescriptor targetType = TypeDescriptor.valueOf(Integer.class);
-		assertTrue(conversionService.canConvert(sourceType, targetType));
-		assertNull(conversionService.convert(list, sourceType, targetType));
+		assertThat(conversionService.canConvert(sourceType, targetType)).isTrue();
+		assertThat(conversionService.convert(list, sourceType, targetType)).isNull();
 	}
 
 	@Test
-	public void stringToArrayCanConvert() {
+	void stringToArrayCanConvert() {
 		conversionService.addConverter(new StringToArrayConverter(conversionService));
-		assertFalse(conversionService.canConvert(String.class, Integer[].class));
+		assertThat(conversionService.canConvert(String.class, Integer[].class)).isFalse();
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		assertTrue(conversionService.canConvert(String.class, Integer[].class));
+		assertThat(conversionService.canConvert(String.class, Integer[].class)).isTrue();
 	}
 
 	@Test
-	public void stringToCollectionCanConvert() throws Exception {
+	void stringToCollectionCanConvert() throws Exception {
 		conversionService.addConverter(new StringToCollectionConverter(conversionService));
-		assertTrue(conversionService.canConvert(String.class, Collection.class));
+		assertThat(conversionService.canConvert(String.class, Collection.class)).isTrue();
 		TypeDescriptor targetType = new TypeDescriptor(getClass().getField("integerCollection"));
-		assertFalse(conversionService.canConvert(TypeDescriptor.valueOf(String.class), targetType));
+		assertThat(conversionService.canConvert(TypeDescriptor.valueOf(String.class), targetType)).isFalse();
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		assertTrue(conversionService.canConvert(TypeDescriptor.valueOf(String.class), targetType));
+		assertThat(conversionService.canConvert(TypeDescriptor.valueOf(String.class), targetType)).isTrue();
 	}
 
 	@Test
-	public void testConvertiblePairsInSet() {
-		Set<GenericConverter.ConvertiblePair> set = new HashSet<GenericConverter.ConvertiblePair>();
+	void convertiblePairsInSet() {
+		Set<GenericConverter.ConvertiblePair> set = new HashSet<>();
 		set.add(new GenericConverter.ConvertiblePair(Number.class, String.class));
 		assert set.contains(new GenericConverter.ConvertiblePair(Number.class, String.class));
 	}
 
 	@Test
-	public void testConvertiblePairEqualsAndHash() {
+	void convertiblePairEqualsAndHash() {
 		GenericConverter.ConvertiblePair pair = new GenericConverter.ConvertiblePair(Number.class, String.class);
 		GenericConverter.ConvertiblePair pairEqual = new GenericConverter.ConvertiblePair(Number.class, String.class);
-		assertEquals(pair, pairEqual);
-		assertEquals(pair.hashCode(), pairEqual.hashCode());
+		assertThat(pairEqual).isEqualTo(pair);
+		assertThat(pairEqual.hashCode()).isEqualTo(pair.hashCode());
 	}
 
 	@Test
-	public void testConvertiblePairDifferentEqualsAndHash() {
+	void convertiblePairDifferentEqualsAndHash() {
 		GenericConverter.ConvertiblePair pair = new GenericConverter.ConvertiblePair(Number.class, String.class);
 		GenericConverter.ConvertiblePair pairOpposite = new GenericConverter.ConvertiblePair(String.class, Number.class);
-		assertFalse(pair.equals(pairOpposite));
-		assertFalse(pair.hashCode() == pairOpposite.hashCode());
+		assertThat(pair.equals(pairOpposite)).isFalse();
+		assertThat(pair.hashCode() == pairOpposite.hashCode()).isFalse();
 	}
 
 	@Test
-	public void convertPrimitiveArray() {
-		GenericConversionService conversionService = new DefaultConversionService();
-		byte[] byteArray = new byte[] { 1, 2, 3 };
-		Byte[] converted = conversionService.convert(byteArray, Byte[].class);
-		assertTrue(Arrays.equals(converted, new Byte[] {1, 2, 3}));
+	void canConvertIllegalArgumentNullTargetTypeFromClass() {
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				conversionService.canConvert(String.class, null));
 	}
 
 	@Test
-	public void canConvertIllegalArgumentNullTargetTypeFromClass() {
-		try {
-			conversionService.canConvert(String.class, null);
-			fail("Did not thow IllegalArgumentException");
-		}
-		catch (IllegalArgumentException ex) {
-		}
+	void canConvertIllegalArgumentNullTargetTypeFromTypeDescriptor() {
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				conversionService.canConvert(TypeDescriptor.valueOf(String.class), null));
 	}
 
 	@Test
-	public void canConvertIllegalArgumentNullTargetTypeFromTypeDescriptor() {
-		try {
-			conversionService.canConvert(TypeDescriptor.valueOf(String.class), null);
-			fail("Did not thow IllegalArgumentException");
-		}
-		catch(IllegalArgumentException ex) {
-		}
-	}
-
-	@Test
-	@SuppressWarnings({ "rawtypes" })
-	public void convertHashMapValuesToList() {
-		GenericConversionService conversionService = new DefaultConversionService();
-		Map<String, Integer> hashMap = new LinkedHashMap<String, Integer>();
-		hashMap.put("1", 1);
-		hashMap.put("2", 2);
-		List converted = conversionService.convert(hashMap.values(), List.class);
-		assertEquals(Arrays.asList(1, 2), converted);
-	}
-
-	@Test
-	public void removeConvertible() {
+	void removeConvertible() {
 		conversionService.addConverter(new ColorConverter());
-		assertTrue(conversionService.canConvert(String.class, Color.class));
+		assertThat(conversionService.canConvert(String.class, Color.class)).isTrue();
 		conversionService.removeConvertible(String.class, Color.class);
-		assertFalse(conversionService.canConvert(String.class, Color.class));
+		assertThat(conversionService.canConvert(String.class, Color.class)).isFalse();
 	}
 
 	@Test
-	public void conditionalConverter() {
-		GenericConversionService conversionService = new GenericConversionService();
+	void conditionalConverter() {
 		MyConditionalConverter converter = new MyConditionalConverter();
 		conversionService.addConverter(new ColorConverter());
 		conversionService.addConverter(converter);
-		assertEquals(Color.BLACK, conversionService.convert("#000000", Color.class));
-		assertTrue(converter.getMatchAttempts() > 0);
+		assertThat(conversionService.convert("#000000", Color.class)).isEqualTo(Color.BLACK);
+		assertThat(converter.getMatchAttempts() > 0).isTrue();
 	}
 
 	@Test
-	public void conditionalConverterFactory() {
-		GenericConversionService conversionService = new GenericConversionService();
+	void conditionalConverterFactory() {
 		MyConditionalConverterFactory converter = new MyConditionalConverterFactory();
 		conversionService.addConverter(new ColorConverter());
 		conversionService.addConverterFactory(converter);
-		assertEquals(Color.BLACK, conversionService.convert("#000000", Color.class));
-		assertTrue(converter.getMatchAttempts() > 0);
-		assertTrue(converter.getNestedMatchAttempts() > 0);
+		assertThat(conversionService.convert("#000000", Color.class)).isEqualTo(Color.BLACK);
+		assertThat(converter.getMatchAttempts() > 0).isTrue();
+		assertThat(converter.getNestedMatchAttempts() > 0).isTrue();
 	}
 
 	@Test
-	public void shouldNotSupportNullConvertibleTypesFromNonConditionalGenericConverter() {
-		GenericConversionService conversionService = new GenericConversionService();
-		GenericConverter converter = new GenericConverter() {
-			@Override
-			public Set<ConvertiblePair> getConvertibleTypes() {
-				return null;
-			}
-			@Override
-			public Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
-				return null;
-			}
-		};
-		try {
-			conversionService.addConverter(converter);
-			fail("Did not throw");
-		}
-		catch (IllegalStateException ex) {
-			assertEquals("Only conditional converters may return null convertible types", ex.getMessage());
-		}
+	void conditionalConverterCachingForDifferentAnnotationAttributes() throws Exception {
+		conversionService.addConverter(new ColorConverter());
+		conversionService.addConverter(new MyConditionalColorConverter());
+
+		assertThat(conversionService.convert("000000xxxx",
+				new TypeDescriptor(getClass().getField("activeColor")))).isEqualTo(Color.BLACK);
+		assertThat(conversionService.convert(" #000000 ",
+				new TypeDescriptor(getClass().getField("inactiveColor")))).isEqualTo(Color.BLACK);
+		assertThat(conversionService.convert("000000yyyy",
+				new TypeDescriptor(getClass().getField("activeColor")))).isEqualTo(Color.BLACK);
+		assertThat(conversionService.convert("  #000000  ",
+				new TypeDescriptor(getClass().getField("inactiveColor")))).isEqualTo(Color.BLACK);
 	}
 
 	@Test
-	public void conditionalConversionForAllTypes() {
-		GenericConversionService conversionService = new GenericConversionService();
+	void shouldNotSupportNullConvertibleTypesFromNonConditionalGenericConverter() {
+		GenericConverter converter = new NonConditionalGenericConverter();
+		assertThatIllegalStateException().isThrownBy(() ->
+				conversionService.addConverter(converter))
+			.withMessage("Only conditional converters may return null convertible types");
+	}
+
+	@Test
+	void conditionalConversionForAllTypes() {
 		MyConditionalGenericConverter converter = new MyConditionalGenericConverter();
 		conversionService.addConverter(converter);
-		assertEquals((Integer) 3, conversionService.convert(3, Integer.class));
-		assertThat(converter.getSourceTypes().size(), greaterThan(2));
-		Iterator<TypeDescriptor> iterator = converter.getSourceTypes().iterator();
-		while(iterator.hasNext()) {
-			assertEquals(Integer.class, iterator.next().getType());
-		}
+		assertThat(conversionService.convert(3, Integer.class)).isEqualTo(3);
+		assertThat(converter.getSourceTypes().size()).isGreaterThan(2);
+		assertThat(converter.getSourceTypes().stream().allMatch(td -> Integer.class.equals(td.getType()))).isTrue();
 	}
 
 	@Test
-	public void convertOptimizeArray() {
+	void convertOptimizeArray() {
 		// SPR-9566
-		GenericConversionService conversionService = new DefaultConversionService();
 		byte[] byteArray = new byte[] { 1, 2, 3 };
 		byte[] converted = conversionService.convert(byteArray, byte[].class);
-		assertSame(byteArray, converted);
+		assertThat(converted).isSameAs(byteArray);
 	}
 
 	@Test
-	public void convertCannotOptimizeArray() {
-		GenericConversionService conversionService = new GenericConversionService();
-		conversionService.addConverter(new Converter<Byte, Byte>() {
-			@Override
-			public Byte convert(Byte source) {
-				return (byte) (source + 1);
-			}
-		});
-		DefaultConversionService.addDefaultConverters(conversionService);
-		byte[] byteArray = new byte[] { 1, 2, 3 };
-		byte[] converted = conversionService.convert(byteArray, byte[].class);
-		assertNotSame(byteArray, converted);
-		assertTrue(Arrays.equals(new byte[] {2, 3, 4}, converted));
-	}
-
-	@Test
-	public void testEnumToStringConversion() {
+	void enumToStringConversion() {
 		conversionService.addConverter(new EnumToStringConverter(conversionService));
-		String result = conversionService.convert(MyEnum.A, String.class);
-		assertEquals("A", result);
+		assertThat(conversionService.convert(MyEnum.A, String.class)).isEqualTo("A");
 	}
 
 	@Test
-	public void testSubclassOfEnumToString() throws Exception {
+	void subclassOfEnumToString() throws Exception {
 		conversionService.addConverter(new EnumToStringConverter(conversionService));
-		String result = conversionService.convert(EnumWithSubclass.FIRST, String.class);
-		assertEquals("FIRST", result);
+		assertThat(conversionService.convert(EnumWithSubclass.FIRST, String.class)).isEqualTo("FIRST");
 	}
 
 	@Test
-	public void testEnumWithInterfaceToStringConversion() {
+	void enumWithInterfaceToStringConversion() {
 		// SPR-9692
 		conversionService.addConverter(new EnumToStringConverter(conversionService));
 		conversionService.addConverter(new MyEnumInterfaceToStringConverter<MyEnum>());
-		String result = conversionService.convert(MyEnum.A, String.class);
-		assertEquals("1", result);
+		assertThat(conversionService.convert(MyEnum.A, String.class)).isEqualTo("1");
 	}
 
 	@Test
-	public void testStringToEnumWithInterfaceConversion() {
+	void stringToEnumWithInterfaceConversion() {
 		conversionService.addConverterFactory(new StringToEnumConverterFactory());
 		conversionService.addConverterFactory(new StringToMyEnumInterfaceConverterFactory());
-		assertEquals(MyEnum.A, conversionService.convert("1", MyEnum.class));
+		assertThat(conversionService.convert("1", MyEnum.class)).isEqualTo(MyEnum.A);
 	}
 
 	@Test
-	public void testStringToEnumWithBaseInterfaceConversion() {
+	void stringToEnumWithBaseInterfaceConversion() {
 		conversionService.addConverterFactory(new StringToEnumConverterFactory());
 		conversionService.addConverterFactory(new StringToMyEnumBaseInterfaceConverterFactory());
-		assertEquals(MyEnum.A, conversionService.convert("base1", MyEnum.class));
+		assertThat(conversionService.convert("base1", MyEnum.class)).isEqualTo(MyEnum.A);
 	}
 
 	@Test
-	public void testStringToEnumSet() throws Exception {
-		DefaultConversionService.addDefaultConverters(conversionService);
-		assertEquals(EnumSet.of(MyEnum.A),
-				conversionService.convert("A", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("enumSet"))));
-	}
-
-	@Test
-	public void convertNullAnnotatedStringToString() throws Exception {
-		DefaultConversionService.addDefaultConverters(conversionService);
+	void convertNullAnnotatedStringToString() throws Exception {
 		String source = null;
 		TypeDescriptor sourceType = new TypeDescriptor(getClass().getField("annotatedString"));
 		TypeDescriptor targetType = TypeDescriptor.valueOf(String.class);
@@ -717,87 +575,89 @@ public class GenericConversionServiceTests {
 	}
 
 	@Test
-	public void multipleCollectionTypesFromSameSourceType() throws Exception {
+	void multipleCollectionTypesFromSameSourceType() throws Exception {
 		conversionService.addConverter(new MyStringToRawCollectionConverter());
 		conversionService.addConverter(new MyStringToGenericCollectionConverter());
 		conversionService.addConverter(new MyStringToStringCollectionConverter());
 		conversionService.addConverter(new MyStringToIntegerCollectionConverter());
 
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection"))));
-		assertEquals(Collections.singleton(4),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection"))));
-		assertEquals(Collections.singleton(4),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection"))));
-		assertEquals(Collections.singleton(4),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection"))));
-		assertEquals(Collections.singleton(4),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection"))));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection")))).isEqualTo(Collections.singleton(4));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection")))).isEqualTo(Collections.singleton(4));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection")))).isEqualTo(Collections.singleton(4));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection")))).isEqualTo(Collections.singleton(4));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection")))).isEqualTo(Collections.singleton("testX"));
 	}
 
 	@Test
-	public void adaptedCollectionTypesFromSameSourceType() throws Exception {
+	void adaptedCollectionTypesFromSameSourceType() throws Exception {
 		conversionService.addConverter(new MyStringToStringCollectionConverter());
 
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection"))));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection")))).isEqualTo(Collections.singleton("testX"));
 
-		try {
-			conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection")));
-			fail("Should have thrown ConverterNotFoundException");
-		}
-		catch (ConverterNotFoundException ex) {
-			// expected
-		}
+		assertThatExceptionOfType(ConverterNotFoundException.class).isThrownBy(() ->
+				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection"))));
 	}
 
 	@Test
-	public void genericCollectionAsSource() throws Exception {
+	void genericCollectionAsSource() throws Exception {
 		conversionService.addConverter(new MyStringToGenericCollectionConverter());
 
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection"))));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection")))).isEqualTo(Collections.singleton("testX"));
 
 		// The following is unpleasant but a consequence of the generic collection converter above...
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection"))));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection")))).isEqualTo(Collections.singleton("testX"));
 	}
 
 	@Test
-	public void rawCollectionAsSource() throws Exception {
+	void rawCollectionAsSource() throws Exception {
 		conversionService.addConverter(new MyStringToRawCollectionConverter());
 
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection"))));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection")))).isEqualTo(Collections.singleton("testX"));
 
 		// The following is unpleasant but a consequence of the raw collection converter above...
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection"))));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection")))).isEqualTo(Collections.singleton("testX"));
 	}
+
+
+	@ExampleAnnotation(active = true)
+	public String annotatedString;
+
+	@ExampleAnnotation(active = true)
+	public Color activeColor;
+
+	@ExampleAnnotation(active = false)
+	public Color inactiveColor;
+
+	public List<Integer> list;
+
+	public Map<String, Integer> map;
+
+	public Map<String, ?> wildcardMap;
+
+	@SuppressWarnings("rawtypes")
+	public Collection rawCollection;
+
+	public Collection<?> genericCollection;
+
+	public Collection<String> stringCollection;
+
+	public Collection<Integer> integerCollection;
 
 
 	@Retention(RetentionPolicy.RUNTIME)
-	public static @interface ExampleAnnotation {
+	private @interface ExampleAnnotation {
+
+		boolean active();
 	}
 
 
@@ -813,7 +673,7 @@ public class GenericConversionServiceTests {
 	}
 
 
-	private static class MyBaseInterfaceConverter implements Converter<MyBaseInterface, String> {
+	private static class MyBaseInterfaceToStringConverter implements Converter<MyBaseInterface, String> {
 
 		@Override
 		public String convert(MyBaseInterface source) {
@@ -822,28 +682,20 @@ public class GenericConversionServiceTests {
 	}
 
 
-	private static class MyStringArrayToResourceArrayConverter implements Converter<String[], Resource[]>	{
+	private static class MyStringArrayToResourceArrayConverter implements Converter<String[], Resource[]> {
 
 		@Override
 		public Resource[] convert(String[] source) {
-			Resource[] result = new Resource[source.length];
-			for (int i = 0; i < source.length; i++) {
-				result[i] = new DescriptiveResource(source[i].substring(1));
-			}
-			return result;
+			return Arrays.stream(source).map(s -> s.substring(1)).map(DescriptiveResource::new).toArray(Resource[]::new);
 		}
 	}
 
 
-	private static class MyStringArrayToIntegerArrayConverter implements Converter<String[], Integer[]>	{
+	private static class MyStringArrayToIntegerArrayConverter implements Converter<String[], Integer[]> {
 
 		@Override
 		public Integer[] convert(String[] source) {
-			Integer[] result = new Integer[source.length];
-			for (int i = 0; i < source.length; i++) {
-				result[i] = Integer.parseInt(source[i].substring(1));
-			}
-			return result;
+			return Arrays.stream(source).map(s -> s.substring(1)).map(Integer::valueOf).toArray(Integer[]::new);
 		}
 	}
 
@@ -853,23 +705,20 @@ public class GenericConversionServiceTests {
 		@Override
 		public Integer[] convert(String source) {
 			String[] srcArray = StringUtils.commaDelimitedListToStringArray(source);
-			Integer[] result = new Integer[srcArray.length];
-			for (int i = 0; i < srcArray.length; i++) {
-				result[i] = Integer.parseInt(srcArray[i].substring(1));
-			}
-			return result;
+			return Arrays.stream(srcArray).map(s -> s.substring(1)).map(Integer::valueOf).toArray(Integer[]::new);
 		}
 	}
 
 
-	public static class WithCopyConstructor {
+	private static class WithCopyConstructor {
 
-		public WithCopyConstructor() {
-		}
+		WithCopyConstructor() {}
 
-		public WithCopyConstructor(WithCopyConstructor value) {
-		}
+		@SuppressWarnings("unused")
+		WithCopyConstructor(WithCopyConstructor value) {}
 	}
+
+
 	private static class MyConditionalConverter implements Converter<String, Color>, ConditionalConverter {
 
 		private int matchAttempts = 0;
@@ -891,9 +740,24 @@ public class GenericConversionServiceTests {
 	}
 
 
+	private static class NonConditionalGenericConverter implements GenericConverter {
+
+		@Override
+		public Set<ConvertiblePair> getConvertibleTypes() {
+			return null;
+		}
+
+		@Override
+		@Nullable
+		public Object convert(@Nullable Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
+			return null;
+		}
+	}
+
+
 	private static class MyConditionalGenericConverter implements GenericConverter, ConditionalConverter {
 
-		private List<TypeDescriptor> sourceTypes = new ArrayList<TypeDescriptor>();
+		private final List<TypeDescriptor> sourceTypes = new ArrayList<>();
 
 		@Override
 		public Set<ConvertiblePair> getConvertibleTypes() {
@@ -907,7 +771,8 @@ public class GenericConversionServiceTests {
 		}
 
 		@Override
-		public Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
+		@Nullable
+		public Object convert(@Nullable Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
 			return null;
 		}
 
@@ -944,26 +809,23 @@ public class GenericConversionServiceTests {
 		}
 	}
 
-
-	interface MyEnumBaseInterface {
-
+	private static interface MyEnumBaseInterface {
 		String getBaseCode();
 	}
 
 
-	interface MyEnumInterface extends MyEnumBaseInterface {
-
+	private interface MyEnumInterface extends MyEnumBaseInterface {
 		String getCode();
 	}
 
 
-	public static enum MyEnum implements MyEnumInterface {
+	private enum MyEnum implements MyEnumInterface {
 
 		A("1"),
 		B("2"),
 		C("3");
 
-		private String code;
+		private final String code;
 
 		MyEnum(String code) {
 			this.code = code;
@@ -981,7 +843,7 @@ public class GenericConversionServiceTests {
 	}
 
 
-	public enum EnumWithSubclass {
+	private enum EnumWithSubclass {
 
 		FIRST {
 			@Override
@@ -992,7 +854,8 @@ public class GenericConversionServiceTests {
 	}
 
 
-	public static class MyStringToRawCollectionConverter implements Converter<String, Collection> {
+	@SuppressWarnings("rawtypes")
+	private static class MyStringToRawCollectionConverter implements Converter<String, Collection> {
 
 		@Override
 		public Collection convert(String source) {
@@ -1001,7 +864,7 @@ public class GenericConversionServiceTests {
 	}
 
 
-	public static class MyStringToGenericCollectionConverter implements Converter<String, Collection<?>> {
+	private static class MyStringToGenericCollectionConverter implements Converter<String, Collection<?>> {
 
 		@Override
 		public Collection<?> convert(String source) {
@@ -1021,18 +884,21 @@ public class GenericConversionServiceTests {
 
 	private static class StringToMyEnumInterfaceConverterFactory implements ConverterFactory<String, MyEnumInterface> {
 
-		@SuppressWarnings("unchecked")
+		@Override
+		@SuppressWarnings({"unchecked", "rawtypes"})
 		public <T extends MyEnumInterface> Converter<String, T> getConverter(Class<T> targetType) {
 			return new StringToMyEnumInterfaceConverter(targetType);
 		}
 
 		private static class StringToMyEnumInterfaceConverter<T extends Enum<?> & MyEnumInterface> implements Converter<String, T> {
+
 			private final Class<T> enumType;
 
 			public StringToMyEnumInterfaceConverter(Class<T> enumType) {
 				this.enumType = enumType;
 			}
 
+			@Override
 			public T convert(String source) {
 				for (T value : enumType.getEnumConstants()) {
 					if (value.getCode().equals(source)) {
@@ -1047,7 +913,8 @@ public class GenericConversionServiceTests {
 
 	private static class StringToMyEnumBaseInterfaceConverterFactory implements ConverterFactory<String, MyEnumBaseInterface> {
 
-		@SuppressWarnings("unchecked")
+		@Override
+		@SuppressWarnings({"unchecked", "rawtypes"})
 		public <T extends MyEnumBaseInterface> Converter<String, T> getConverter(Class<T> targetType) {
 			return new StringToMyEnumBaseInterfaceConverter(targetType);
 		}
@@ -1060,6 +927,7 @@ public class GenericConversionServiceTests {
 				this.enumType = enumType;
 			}
 
+			@Override
 			public T convert(String source) {
 				for (T value : enumType.getEnumConstants()) {
 					if (value.getBaseCode().equals(source)) {
@@ -1072,7 +940,7 @@ public class GenericConversionServiceTests {
 	}
 
 
-	public static class MyStringToStringCollectionConverter implements Converter<String, Collection<String>> {
+	private static class MyStringToStringCollectionConverter implements Converter<String, Collection<String>> {
 
 		@Override
 		public Collection<String> convert(String source) {
@@ -1081,7 +949,7 @@ public class GenericConversionServiceTests {
 	}
 
 
-	public static class MyStringToIntegerCollectionConverter implements Converter<String, Collection<Integer>> {
+	private static class MyStringToIntegerCollectionConverter implements Converter<String, Collection<Integer>> {
 
 		@Override
 		public Collection<Integer> convert(String source) {
@@ -1090,23 +958,36 @@ public class GenericConversionServiceTests {
 	}
 
 
-	@ExampleAnnotation
-	public String annotatedString;
+	@SuppressWarnings("rawtypes")
+	private static class UntypedConverter implements Converter {
 
-	public List<Integer> list;
+		@Override
+		public Object convert(Object source) {
+			return source;
+		}
+	}
 
-	public Map<String, Integer> map;
 
-	public Map<String, ?> wildcardMap;
+	private static class ColorConverter implements Converter<String, Color> {
 
-	public EnumSet<MyEnum> enumSet;
+		@Override
+		public Color convert(String source) {
+			return Color.decode(source.trim());
+		}
+	}
 
-	public Collection rawCollection;
 
-	public Collection<?> genericCollection;
+	private static class MyConditionalColorConverter implements Converter<String, Color>, ConditionalConverter {
 
-	public Collection<String> stringCollection;
+		@Override
+		public boolean matches(TypeDescriptor sourceType, TypeDescriptor targetType) {
+			ExampleAnnotation ann = targetType.getAnnotation(ExampleAnnotation.class);
+			return (ann != null && ann.active());
+		}
 
-	public Collection<Integer> integerCollection;
-
+		@Override
+		public Color convert(String source) {
+			return Color.decode(source.substring(0, 6));
+		}
+	}
 }
